Seweryn Suszka/force-app/main/default/objects/Uczestnik__c/Uczestnik__c.object-meta.xml
<CustomObject>
    <label>Uczestnik</label>
    <nameField>
        <label>Uczestnik Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Uczestnicy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>