Seweryn Suszka/force-app/main/default/objects/Uczestnik__c/fields/Data_Urodzenia__c.field-meta.xml
<CustomField>
    <fullName>Data_Urodzenia__c</fullName>
    <label>Data Urodzenia</label>
    <required>true</required>
    <type>Date</type>
</CustomField>