Seweryn Suszka/force-app/main/default/objects/Uczestnik__c/fields/Imie__c.field-meta.xml
<CustomField>
    <fullName>Imie__c</fullName>
    <label>Imię</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>