Seweryn Suszka/force-app/main/default/objects/Uczestnik__c/fields/Nazwisko__c.field-meta.xml
<CustomField>
    <fullName>Nazwisko__c</fullName>
    <label>Nazwisko</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>