Seweryn Suszka/force-app/main/default/objects/Uczestnik__c/validationRules/Pelnoletni_Uczestnik.validationRule-meta.xml
<ValidationRule>
    <fullName>Pelnoletni_Uczestnik</fullName>
    <active>true</active>
    <errorConditionFormula>TODAY() &lt; ADDMONTHS(Data_Urodzenia__c,216)</errorConditionFormula>
    <errorDisplayField>Data_Urodzenia__c</errorDisplayField>
    <errorMessage>Uczestnik musi być pełnoletni!</errorMessage>
</ValidationRule>